Revert filter back to ids for query efficiency, fix thumbnail bug
